<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DHL</string>
    <string name="hello">Hello User!</string>
    <string name="user_id">用户ID:</string>
    <string name="userid_hint">请输入用户ID</string>
    <string name="ok">确认</string>
    <string name="back0">退出</string>
    <string name="back">返回</string>
    <string name="DocID">请输入DocID</string>
    <string name="TaskID">请输入TaskID</string>
    <string name="huowei">货位:</string>
    <string name="SKU">SKU:</string>
    <string name="count">数量:</string>
    <string name="tijiao">手输提交</string>
    <string name="mainmenu_name">主菜单</string>
    <string name="fahuo_main_name">发货菜单</string>
    <string name="jianhuo_back">  返   回  </string>
    <string name="fahuo_func_name">拣货操作</string>
    <string name="opration_task">TaskID:</string>
    <string name="jianhuo">拣货操作</string>
    <string name="huowei_info">请输入货位信息</string>
    <string name="fenjian">分拣操作</string>
    <string name="baozhuang">包装操作</string>
    <string name="BoxID">请输入Box ID</string>
    <string name="timeout">返回工作</string>
    <string name="pandian">  盘  点  </string>
    <string name="qita">其他</string>
    <string name="sync">同步数据</string>
    <string name="end">结束</string>
    
    <string name="label_state">连接状态:</string>
	<string name="ble_not_supported">BLE is not supported</string>
	
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
	<string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
     <string name="menu_connect">未连接</string>
    <string name="menu_disconnect">已连接</string>
     <string name="menu_share">share</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    
     <string name="unknown_device">Unknown device</string>
     <string name="unknown_service">Unknown service</string>
     <string name="unknown_characteristic">Unknown characteristic</string>
     
	<string name="bluetooth_open">开启蓝牙</string>
	 <string name="connect_close">连接断开</string>
    <string name="SERVICES_COVERED">服务已连接</string>
    <string name="SERVICES_DISCOVERED">未找到该服务</string>
    <string name="menu_disconnect_new">已连接，若要连接其他设备，请先断开连接</string>
    
	 <string name="bluetooth_scan_activity_dialog">正在连接服务，请稍后...</string>
    <string name="bluetooth_scan_connect_w16">已配对的设备:</string>
    <string name="bluetooth_scan_noconnect_w16">暂无设备连接</string>
    <string name="bluetooth_scan_device">搜索设备</string>
    <string name="login_set">设置</string>
    <string name="service">同步服务器</string>
    <string name="locidservice">更新货架接口</string>

    

</resources>
