<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/user_id"
            android:textSize="28sp" />

        <EditText
            android:id="@+id/user_id_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:hint="@string/userid_hint"
            android:maxLength="35"
            android:textSize="28sp" />
    </LinearLayout>

    <Button
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/ok"
        android:layout_alignBottom="@+id/ok"
        android:layout_marginLeft="82dp"
        android:layout_toRightOf="@+id/ok"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@drawable/draw_button"
        android:text="@string/back0" 
        android:onClick="login_close"
        android:textSize="26sp"
        />

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="49dp"
        android:background="@drawable/draw_button"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/ok"
        android:onClick="login_ok"
        android:textSize="26sp" />

</RelativeLayout>